--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -99,9 +99,9 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Diet:"
-                            android:textSize="35sp"
-                            android:textColor="@color/black"/>
+                            android:text="Diet :"
+                            android:textSize="40sp"
+                            android:textColor="@color/lightBlue"/>
 
                         <CheckBox
                             android:textColorHint="@color/white"
@@ -155,9 +155,9 @@
                             android:layout_marginTop="10dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Allergies:"
-                            android:textSize="35sp"
-                            android:textColor="@color/black"/>
+                            android:text="Allergies :"
+                            android:textSize="40sp"
+                            android:textColor="@color/lightBlue"/>
 
                         <CheckBox
                             android:textColorHint="@color/white"
@@ -243,9 +243,9 @@
                             android:layout_marginTop="10dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Cuisines:"
-                            android:textSize="35sp"
-                            android:textColor="@android:color/black"/>
+                            android:text="Cuisines :"
+                            android:textSize="40sp"
+                            android:textColor="@color/lightBlue"/>
 
                         <CheckBox
                             android:textColorHint="@color/white"
