--- a/app/src/main/res/layout/activity_search_meals.xml
+++ b/app/src/main/res/layout/activity_search_meals.xml
@@ -17,14 +17,34 @@
             android:id="@+id/activity_search_meals"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            tools:context="ljuboandtedi.fridger.activties.SearchMealsActivity"
-          >
+            android:background="@color/darkBlue"
+            tools:context="ljuboandtedi.fridger.activties.SearchMealsActivity">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_weight="0.5"
+                android:layout_height="0dp">
+
+                <EditText
+                    android:layout_width="0dp"
+                    android:id="@+id/seachMeals_mealToSearch"
+                    android:layout_weight="3"
+                    android:hint="Enter search here"
+                    android:textColorHint="@color/lightBlue"
+                    android:gravity="center"
+                    android:layout_height="match_parent"
+                    android:singleLine="true"
+                    android:lines="1"
+                    android:maxLines="1"
+                    android:inputType="text"
+                    android:imeOptions="actionDone"/>
+
+            </LinearLayout>
             <LinearLayout
                 android:layout_weight="0.5"
                 android:layout_width="match_parent"
@@ -36,6 +56,7 @@
                     android:layout_weight="1"
                     android:layout_height="match_parent">
                 </Spinner>
+
                 <Spinner
                     android:id="@+id/holidaySpinner"
                     android:layout_width="0dp"
@@ -57,8 +78,9 @@
                     <TextView
                         android:layout_width="0dp"
                         android:text="Sweet"
-                        android:textSize="15sp"
+                        android:textSize="20sp"
                         android:gravity="center"
+                        android:textColor="@color/white"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
                         android:id="@+id/textView" />
@@ -79,8 +101,9 @@
                     <TextView
                         android:layout_width="0dp"
                         android:text="Meaty"
-                        android:textSize="15sp"
+                        android:textSize="20sp"
                         android:gravity="center"
+                        android:textColor="@color/white"
                         android:layout_weight="1"
                         android:layout_height="match_parent" />
                     <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
@@ -99,8 +122,9 @@
                     <TextView
                         android:layout_width="0dp"
                         android:text="Sour"
-                        android:textSize="15sp"
+                        android:textSize="20sp"
                         android:gravity="center"
+                        android:textColor="@color/white"
                         android:layout_weight="1"
                         android:layout_height="match_parent" />
                     <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
@@ -119,8 +143,9 @@
                     <TextView
                         android:layout_width="0dp"
                         android:text="Bitter"
-                        android:textSize="15sp"
+                        android:textSize="20sp"
                         android:gravity="center"
+                        android:textColor="@color/white"
                         android:layout_weight="1"
                         android:layout_height="match_parent" />
 
@@ -140,9 +165,10 @@
                     <TextView
                         android:layout_width="0dp"
                         android:text="Piquant"
-                        android:textSize="15sp"
+                        android:textSize="20sp"
                         android:gravity="center"
                         android:layout_weight="1"
+                        android:textColor="@color/white"
                         android:layout_height="match_parent" />
                     <com.yahoo.mobile.client.android.util.rangeseekbar.RangeSeekBar
                         android:id="@+id/rangeSeekbarPiquant"
@@ -153,24 +179,17 @@
                         rsb:absoluteMaxValue="1"
                         rsb:absoluteMinValue="0" />
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
+
+                <Button
+                    android:layout_width="wrap_content"
                     android:layout_weight="1"
-                    android:layout_height="0dp">
-                    <EditText
-                        android:layout_width="0dp"
-                        android:id="@+id/seachMeals_mealToSearch"
-                        android:layout_weight="3"
-                        android:hint="What do you need?"
-                        android:layout_height="match_parent" />
-                    <Button
-                        android:layout_width="0dp"
-                        android:layout_weight="1.3"
-                        android:id="@+id/searchMeal_SearchButton"
-                        android:text="Search"
-                        android:layout_height="match_parent" />
-                </LinearLayout>
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/searchMeal_SearchButton"
+                    android:text="   Search   "
+                    android:textSize="30dp"
+                    android:layout_gravity="center"
+                    android:layout_height="0dp"
+                    android:background="@drawable/profile_confirm_button"/>
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
