--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#4cb4d6</color>
     <color name="lightBlue">#4cb4d6</color>
     <color name="darkBlue">#3B5998</color>
     <color name="white">#FFFFFF</color>
