--- a/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
+++ b/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
@@ -12,7 +12,6 @@
         sothree:umanoDragView="@+id/dragView"
         sothree:umanoOverlay="true"
         sothree:umanoPanelHeight="68dp"
-        sothree:umanoParalaxOffset="100dp"
         sothree:umanoShadowHeight="4dp">
         <FrameLayout
             android:layout_below="@id/toolbar"
@@ -21,6 +20,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <ImageView
+                android:id="@+id/recipe_info_Image"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:scaleType="centerCrop">  </ImageView>
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/recipe_info_FavouriteButton" />
             <FrameLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
@@ -58,16 +66,8 @@
                         android:layout_weight="1"
                         android:id="@+id/recipe_info_TotalTime"/>
                 </LinearLayout>
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/recipe_info_FavouriteButton" />
-                <ImageView
-                    android:id="@+id/recipe_info_Image"
-                    android:layout_height="match_parent"
-                    android:layout_width="match_parent"
-                    android:scaleType="centerCrop">
-                </ImageView>
+
+
             </FrameLayout>
         </FrameLayout>
         <LinearLayout
@@ -105,7 +105,7 @@
             </LinearLayout>
 
             <ScrollView
-
+                android:nestedScrollingEnabled="true"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1">
@@ -158,7 +158,7 @@
                         android:layout_height="0dp">
                       <ListView
                           android:layout_width="match_parent"
-                          android:layout_weight="4"
+                          android:layout_weight="3"
                           android:layout_height="0dp"
                           android:id="@+id/recycleListForIngredients">
 
