--- a/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
+++ b/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
@@ -55,6 +55,7 @@
                     android:layout_gravity="bottom"
                     android:layout_height="50dp">
                     <TextView
+                        android:textSize="20sp"
                         android:textColor="@android:color/white"
                         android:gravity="center"
                         android:layout_width="0dp"
@@ -62,19 +63,21 @@
                         android:layout_weight="1"
                         android:id="@+id/recipe_info_Calories"/>
                     <TextView
-                        android:textColor="@android:color/white"
-                        android:gravity="center"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:id="@+id/recipe_info_Ingredients"/>
-                    <TextView
+                        android:textSize="20sp"
                         android:textColor="@android:color/white"
                         android:gravity="center"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:id="@+id/recipe_info_TotalTime"/>
+                    <TextView
+                        android:textSize="20sp"
+                        android:textColor="@android:color/white"
+                        android:gravity="center"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:id="@+id/recipe_info_Ingredients"/>
                 </LinearLayout>
 
 
@@ -84,7 +87,7 @@
             android:id="@+id/dragView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ffffff"
+            android:background="@color/black"
             android:clickable="true"
             android:focusable="false"
             android:orientation="vertical">
@@ -92,105 +95,115 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:background="@color/white">
 
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textColor="@color/lightBlue"
+                    android:textColor="@color/darkBlue"
                     android:gravity="center_vertical"
                     android:paddingLeft="10dp"
                     android:text="Recipe Details"
-                    android:textSize="15sp" />
+                    android:textSize="30sp" />
 
                 <ImageButton
                     android:id="@+id/recipe_info_HideButton"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_margin="10dp"
                     android:background="@drawable/arrow_down"/>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_weight="0.2">
+                android:background="@color/black">
 
                 <Button
-                    android:background="@color/com_facebook_blue"
+                    android:background="@drawable/profile_confirm_button"
                     android:id="@+id/recipe_info_viewNutritions"
                     android:layout_width="0dp"
-                    android:text="Nutrition Values"
+                    android:textSize="18sp"
+                    android:text="Nutrition"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:layout_margin="5dp"/>
 
                 <Button
-                    android:background="@color/com_facebook_blue"
+                    android:background="@drawable/profile_confirm_button"
                     android:id="@+id/recipe_info_showIngredientsActivity"
+                    android:textSize="18sp"
                     android:layout_width="0dp"
                     android:text="Ingredients"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:layout_margin="5dp"/>
 
                 <Button
-                    android:background="@color/com_facebook_blue"
+                    android:background="@drawable/profile_confirm_button"
                     android:id="@+id/recipe_info_viewDirections"
-                    android:text="View Directions"
+                    android:text="Directions"
+                    android:textSize="18sp"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1"
+                    android:layout_margin="5dp"/>
             </LinearLayout>
-            <LinearLayout
-                android:background="@color/md_blue_grey_400"
+            <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_weight="1.7"
+                android:layout_height="wrap_content"
+                android:id="@+id/recycleListForRelatedMeals">
+            </android.support.v7.widget.RecyclerView>
+            <TextView
+                android:background="@color/black"
+                android:layout_width="match_parent"
+                android:text="Continue Exploring"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"/>
+            <LinearLayout
+                android:background="@color/black"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_width="match_parent"
                 android:orientation="horizontal"
-                android:layout_height="0dp">
-                <TextView
-                    android:background="@color/com_facebook_blue"
-                    android:layout_width="match_parent"
-                    android:layout_weight="1.4"
-                    android:id="@+id/recipe_info_continueExploring"
-                    android:text=""
-                    android:textColor="@color/md_blue_50"
-                    android:textSize="15sp"
-                    android:layout_height="match_parent" />
+                android:layout_height="wrap_content">
+
                 <Button
-                    android:textColor="@color/lightBlue"
-                    android:textSize="15sp"
+                    android:background="@drawable/profile_confirm_button"
+                    android:textSize="18sp"
                     android:gravity="center"
                     android:id="@+id/recipe_info_course1"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent" />
                 <Button
-                    android:textColor="@color/lightBlue"
+                    android:background="@drawable/profile_confirm_button"
                     android:gravity="center"
+                    android:textSize="18sp"
                     android:id="@+id/recipe_info_course2"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent" />
 
                 <Button
-                    android:textColor="@color/lightBlue"
+                    android:background="@drawable/profile_confirm_button"
                     android:gravity="center"
+                    android:textSize="18sp"
                     android:id="@+id/recipe_info_course3"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent" />
 
             </LinearLayout>
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="6"
-                android:id="@+id/recycleListForRelatedMeals">
-            </android.support.v7.widget.RecyclerView>
         </LinearLayout>
     </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 </RelativeLayout>
