--- a/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
+++ b/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
@@ -83,6 +83,7 @@
 
             </FrameLayout>
         </FrameLayout>
+
         <LinearLayout
             android:id="@+id/dragView"
             android:layout_width="match_parent"
@@ -117,93 +118,101 @@
                     android:background="@drawable/arrow_down"/>
 
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="@color/black">
+                android:layout_height="match_parent">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:background="@color/black">
 
-                <Button
-                    android:background="@drawable/profile_confirm_button"
-                    android:id="@+id/recipe_info_viewNutritions"
-                    android:layout_width="0dp"
-                    android:textSize="18sp"
-                    android:text="Nutrition"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="5dp"/>
+                        <Button
+                            android:background="@drawable/profile_confirm_button"
+                            android:id="@+id/recipe_info_viewNutritions"
+                            android:layout_width="0dp"
+                            android:textSize="16sp"
+                            android:text="Nutrition"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:layout_margin="5dp"/>
 
-                <Button
-                    android:background="@drawable/profile_confirm_button"
-                    android:id="@+id/recipe_info_showIngredientsActivity"
-                    android:textSize="18sp"
-                    android:layout_width="0dp"
-                    android:text="Ingredients"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="5dp"/>
+                        <Button
+                            android:background="@drawable/profile_confirm_button"
+                            android:id="@+id/recipe_info_showIngredientsActivity"
+                            android:textSize="16sp"
+                            android:layout_width="0dp"
+                            android:text="Ingredients"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:layout_margin="5dp"/>
 
-                <Button
-                    android:background="@drawable/profile_confirm_button"
-                    android:id="@+id/recipe_info_viewDirections"
-                    android:text="Directions"
-                    android:textSize="18sp"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_margin="5dp"/>
-            </LinearLayout>
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/recycleListForRelatedMeals">
-            </android.support.v7.widget.RecyclerView>
-            <TextView
-                android:background="@color/black"
-                android:layout_width="match_parent"
-                android:text="Continue Exploring"
-                android:textColor="@color/white"
-                android:textSize="30sp"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"/>
-            <LinearLayout
-                android:background="@color/black"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content">
+                        <Button
+                            android:background="@drawable/profile_confirm_button"
+                            android:id="@+id/recipe_info_viewDirections"
+                            android:text="Directions"
+                            android:textSize="16sp"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:layout_margin="5dp"/>
+                    </LinearLayout>
+                    <android.support.v7.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/recycleListForRelatedMeals">
+                    </android.support.v7.widget.RecyclerView>
+                    <TextView
+                        android:background="@color/black"
+                        android:layout_width="match_parent"
+                        android:text="Continue Exploring"
+                        android:textColor="@color/white"
+                        android:textSize="30sp"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"/>
+                    <LinearLayout
+                        android:background="@color/black"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_width="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_height="wrap_content">
 
-                <Button
-                    android:background="@drawable/profile_confirm_button"
-                    android:textSize="18sp"
-                    android:gravity="center"
-                    android:id="@+id/recipe_info_course1"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent" />
-                <Button
-                    android:background="@drawable/profile_confirm_button"
-                    android:gravity="center"
-                    android:textSize="18sp"
-                    android:id="@+id/recipe_info_course2"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent" />
+                        <Button
+                            android:background="@drawable/profile_confirm_button"
+                            android:textSize="18sp"
+                            android:gravity="center"
+                            android:id="@+id/recipe_info_course1"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="match_parent" />
+                        <Button
+                            android:background="@drawable/profile_confirm_button"
+                            android:gravity="center"
+                            android:textSize="18sp"
+                            android:id="@+id/recipe_info_course2"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="match_parent" />
 
-                <Button
-                    android:background="@drawable/profile_confirm_button"
-                    android:gravity="center"
-                    android:textSize="18sp"
-                    android:id="@+id/recipe_info_course3"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent" />
+                        <Button
+                            android:background="@drawable/profile_confirm_button"
+                            android:gravity="center"
+                            android:textSize="18sp"
+                            android:id="@+id/recipe_info_course3"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="match_parent" />
 
-            </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+            </ScrollView>
         </LinearLayout>
     </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 </RelativeLayout>
